--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     restart: unless-stopped
     environment:
       - DEBIAN_FRONTEND=noninteractive
+    privileged: true
     # Uncomment and set if you need to pull from a private registry
     # environment:
     #   - GITHUB_TOKEN=${GITHUB_TOKEN}
