--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,12 +23,9 @@ classifiers = [
     "Topic :: Security",
 ]
 dependencies = [
-    "anyio>=4.5",
     "click>=8.1.0",
+    "fastmcp>=2.0",
     "httpx>=0.27",
-    "mcp[cli]>=1.26",
-    "starlette",
-    "uvicorn",
 ]
 
 [project.scripts]
